--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "paper-dashboard-react",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
   "dependencies": {
     "@babel/core": "7.18.6",
     "bootstrap": "4.6.0",
     "chart.js": "3.2.1",
+    "gh-pages": "^6.1.1",
     "jquery": "3.6.0",
     "perfect-scrollbar": "1.5.5",
-    "react": "18.2.0",
+    "react": ">=16.8.0",
     "react-chartjs-2": "3.0.3",
-    "react-dom": "18.2.0",
+    "react-dom": ">=16.8.0",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
@@ -19,6 +19,8 @@
     "sass": "1.53.0"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
